# docte6g

./: .gitattributes  .gitignore  README.md
assets/objects/cube/: cube.blend  cube.blend1  cube.mtl  cube.ply  cube.xml
assets/objects/cube/meshes/: Cube.ply
assets/objects/iw_hub/: iw_hub.blend  iw_hub.blend1  iw_hub.mtl  iw_hub.ply  iw_hub.xml  iw_hub1.blend  iw_hub1.blend1  iw_hub1.ply
assets/objects/tienkung/: tienkung.blend  tienkung.mtl  tienkung.ply  tienkung.xml
assets/scenes/free_space/: free_space.blend  free_space.blend1  free_space.mtl  free_space.xml  free_space.xml.bak
assets/scenes/urban_macro/: etoile.blend  etoile.blend1  etoile.mtl  etoile.ply  etoile.xml
assets/scenes/urban_micro/: munich.blend  munich.mtl  munich.xml  street_canyon.blend  street_canyon.blend1  street_canyon.mtl  street_canyon.ply  street_canyon.xml
assets/scenes/warehouse/: warehouse.blend  warehouse.blend1  warehouse.mtl  warehouse.ply  warehouse.xml
ns3_server/: .lock-ns3_linux_build  CMakeLists.txt  pyproject.toml  run_benchmark.sh
ns3_server/contrib/nr/: CMakeLists.txt
ns3_server/contrib/sionnart/: CMakeLists.txt
ns3_server/contrib/sionnart/model/: mobility-py-embed.cc  mobility-py-embed.h  py-embed-utils.h  sionna-mobility-model.cc  sionna-mobility-model.h  sionna-phased-array-spectrum-propagation-loss-model.cc  sionna-phased-array-spectrum-propagation-loss-model.h  sionna-propagation-cache.cc  sionna-propagation-cache.h  sionna-propagation-delay-model.cc  sionna-propagation-delay-model.h  sionna-propagation-loss-model.cc  sionna-propagation-loss-model.h  sionna-py-embed.cc  sionna-py-embed.h  sionna-spectrum-propagation-loss-model.cc  sionna-spectrum-propagation-loss-model.h
ns3_server/contrib/sionnart/py/: mobility.py  sionnart.ipynb  sionnart.py
ns3_server/scratch/: CMakeLists.txt
ns3_server/scratch/benchmark-ns3sionna/: CMakeLists.txt  benchmark-ns3sionna.cc
ns3_server/scratch/benchmark-sionnart/: CMakeLists.txt  benchmark-sionnart.cc
ns3_server/scratch/sionnart-three-scenes/: CMakeLists.txt  sionnart-three-scenes.cc
(+52 files in other folders)
